--- a/docs/assignments/mult2.org
+++ b/docs/assignments/mult2.org
@@ -6,7 +6,7 @@
 In this assignment you will add some modifications to the source files
 you submitted for [[../mult-part-1/][Mult - Part 1]].  If you didn't fully complete or
 understand that assignment be sure to review the solutions and ask
-your classmates or me for clarification.
+your classmates or me for clarification before moving on to this one.
 
 * Introduction
 
@@ -19,7 +19,7 @@ default input/output streams to it. These are:
 
 In the first part of this assignment you created three programs:
 =mult.sh=, =mult.py= and =mult.cc= that read data from /standard in/
-and wrote data to /standard out/.  We will expand on that to also
+and wrote data to /standard out/.  We will expand on that idea and also
 write to /standard error/.
 
 * Assignment
@@ -43,19 +43,20 @@ crashes. Sometimes the language may be built in such a way to
 encourage certain types of error handling, other times there may be no
 constraints on the programer.  Learn about the error handling
 techniques you have available to you in C++, Python and bash.  Try to
-determin if each language has a preferred method of handling errors.
+determine if each language has a preferred method of handling errors.
 
 For each of Python, C++ and bash:
+  - learn how to write if/then/else statements
   - learn how to check for an error when trying to convert a string to an integer
-  - learn how to write data to /standard error/ (file descriptor 2)
+  - learn how to write a message to /standard error/ (file descriptor 2)
 
 ** Add Error Checking and Reporting
 Add basic error checking to =mult.sh=, =mult.py= and =mult.cc=.  Each
 program should check that each line read in is really an integer
-value.  If a line is read that can **not** be converted to an integer, the program should write a message to /standard error/ that says
+value.  If a line is read that can *not* be converted to an integer, the program should write a message to /standard error/ that says
 
 #+begin_example
-warning: can not convert to an integer: [line]
+warning: line #: cannot convert to an integer
 #+end_example
 
 where =[line]= is replaced with the actual line that cause the trouble.  The the program should continue reading the next line.  The final product should be the product of all valid integers that were entered.  For example
@@ -65,13 +66,14 @@ $ ./mult
 3<ENTER>
 2<ENTER>
 five<ENTER>
-warning: can not convert to an integer: five
+mult:3: cannot convert to an integer
 -1<ENTER>
 ^D
 -6
 $
 #+end_example
 
+*Note for Python:* Python's buffering shenanigans will once again require that you press =^D= twice 
 And as before, you should still be able to redirect a file to the /standard input/ of your program:
 
 #+begin_example
@@ -81,50 +83,76 @@ $ cat numbers
 five
 -1
 $ ./mult < numbers
-warning: can not convert to an integer: five
+warning: cannot convert to an integer: five
 1
 $
 #+end_example
 
-And becuase the output is still written to /standard out/ and the
+And because the output is still written to /standard out/ and the
 warning is written to /standard error/, you should be able to redirect
 one or the other or both to files:
 
 #+begin_example
 $ ./mult < numbers > mult.out
-warning: can not convert to an integer: five
+mult:3: warning: cannot convert to an integer
 $ cat mult.out
 1
 $ ./mult < numbers 2> mult.error
 1
 $ cat mult.error
-warning: can not convert to an integer: five
+warning: cannot convert to an integer: five
 $
 #+end_example
 
+** README
+For this and all future assignments, if you have notes that don't
+really belong in code comments, feel free to include a =README= or
+=README.md= file in the base directory of your repo.  You can use this
+file to include any special instructions for the users of your program
+(there shouldn't be any special instructions needed for this
+assignment!), and to mention known bugs, for instance, if error
+checking is working as you expect in =mult.py= and =mult.sh=, but not
+as you expect, or at all in =mult.cc= then make a note of that in the
+=README=.
+
 * Grading and Submission
 
-In addition to proper functionality described by the assignment I will
-be looking for:
+In addition to proper functionality described by the assignment I will be looking for:
 
 - proper use of /standard in/, /standard out/ and /standard error/
-- demonstrate understanding of error handeling philosophy for each language
+- demonstrate understanding of error handling philosophy for each language
 - readable code
 - elegant solutions
 
-- Make sure you have added and committed your final changes to your
-repository (=git status= should report a clean working directory).  
+- Make sure you have added and committed your final changes to your repository (=git status= should report a clean working directory).  
 
-- =git log= should report at least one additional commit compared to
-what you submitted for part 1, more commits are ok of course, if
+- =git log= should report at least one additional commit compared to what you submitted for part 1, more commits are ok of course.
 
-Once you have added and committed all your changes, run the following
-command from your working directory:
+Once you have added and committed all your changes, run the following command from your working directory:
 
 #+BEGIN_EXAMPLE
     $ git push
 #+END_EXAMPLE
 
-If the command executes without any errors you should be done. I am
-working on a confirmation email system, it is currently not implemented
-though. I will update this write-up when it is.
+If you get a message from git indicating it doesn't know which branch you want to push, or which remote you want to push to, then instead run
+
+#+begin_example
+    $ git push --set-upstream origin master
+#+end_example
+
+and next time you should only have to use =git push=.
+
+If the command executes without any errors you should be
+done. Remember, you can always clone your repo into a new location to
+see exactly what state it is on the server.
+
+#+begin_example
+$ cd /tmp
+$ git clone [full repo url]
+$ cd mult
+$ ls
+mult.cc  mult.py  mult.sh  README
+$
+#+end_example
+
+Once again, check that your three source files are in the base directory of your repo!
