--- a/docs/Activities-Textual.org
+++ b/docs/Activities-Textual.org
@@ -57,6 +57,9 @@ $ cd newrepo
 *** Pushing doesn't change your repo
 *** Push early, you can always push updates later if you catch a mistake
 
+** Git - reference
+*** http://git-scm.com/docs 
+*** Read Chapter 1.3 of Documentation/Book
 * Reflection
 ** Python, bash and C++, oh my
 *** line buffering
