--- a/docs/Lecture-Regex-1.org
+++ b/docs/Lecture-Regex-1.org
@@ -49,7 +49,7 @@ linguistic necessity here. I will, however, generally call them
 *** the use of regular expressions goes back to the roots of Unix
 *** The command to search for '=re=' in the =ed= editor is =g/re/p=
 ** Regular Expressions
-*** mini-language
+*** domain specific language
 *** concise syntax to match strings of text
 *** not as difficult as some will have you think
 ** Language support
