--- a/docs/Activities-Regex-1.org
+++ b/docs/Activities-Regex-1.org
@@ -43,9 +43,9 @@ $ ./python-switch.py three "hello world"
 - [[http://www.debuggex.com/?re=&str=][Debuggex]] - an interactive, visual regex debugger and playground
 - [[http://www.cheatography.com/davechild/cheat-sheets/regular-expressions/][cheat sheet]] (one of many)
 
-** Exercises
+** Exercise
 - match something that looks like a phone number: a sequence of 10 digits split by nothing, spaces or dashes:
-#+begin_example
+  #+begin_example
 555-123-4567   # match
 1234567890     # match
 (555) 540-1234 # match
@@ -54,10 +54,19 @@ $ ./python-switch.py three "hello world"
 
 1. create a new git repo (use remote path inclass/CREATOR/regex1.git, replace CREATOR with your git user name)
 2. create a file called =phonefilter=, write your commands in that file so that it can be executed as a bash script
-2. Start by writing a grep command that will match only the phone numbers in =regex_data= that are labeled "should match"
-3. pipe the output of the previous command through a sed substitution expression that formats matched phone numbers to look like
+
+** Exercise
+3. Start by writing a grep command that will match only the phone numbers in =regex_data= that are labeled "should match"
+4. pipe the output of the previous command through a sed substitution expression that formats matched phone numbers to look like
+  #+begin_example
 +1-540-555-1234
 +1-978-555-1234
 +1-123-555-1234
-( the comments =# should match= will still be part of the output at this point)
-3. pipe the output of the previous command through another command that strips away the comments starting with '#' leaving just a list of phone numbers
+#+end_example
+   ( the comments =# should match= will still be part of the output at this point)
+5. pipe the output of the previous command through another command that strips away the comments starting with '#' leaving just a list of phone numbers
+
+** Exercise
+- add/commit your changes
+- add/commit an =AUTHORS= file that lists pids of group members, one per line
+- push to the remote repo path =inclass/CREATOR/regex1.git=
