--- a/docs/Activities-Regex-2.org
+++ b/docs/Activities-Regex-2.org
@@ -16,8 +16,11 @@
 #+PROPERTY: BEAMER_col_ALL 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1.0 :ETC
 
 * Potential topics
-** list comprehension
-** talk of minilanguages, power vs complexity
+** [[http://www.catb.org/esr/writings/taoup/html/ch08s01.html][Understanding the Taxonomy of Languages]]
+** minilanguages: power vs complexity
+
+[[file:assets/regular_expressions.org]]
+
 * Continue exercises
 ** regex and filtering
 - continue work on =phonefilter= implementation using =grep=, =sed= in a bash script
