--- a/docs/Activities-Regex-2.org
+++ b/docs/Activities-Regex-2.org
@@ -18,9 +18,19 @@
 * Potential topics
 ** [[http://www.catb.org/esr/writings/taoup/html/ch08s01.html][Understanding the Taxonomy of Languages]]
 ** minilanguages: power vs complexity
+#+CAPTION: [[https://xkcd.com/208/][https://xkcd.com/208/]]
+#+ATTR_LaTeX: height=6cm
+[[file:assets/regular_expressions.png]]
 
-[[file:assets/regular_expressions.org]]
+** With great power...
 
+#+begin_quote
+Some people, when confronted with a problem, think
+“I know, I'll use regular expressions.”   Now they have two problems. 
+#+end_quote
+(See [[http://regex.info/blog/2006-09-15/247][Jeffrey Friedl's Blog]] for history of this quote)
+- Don't over-use regular expressions
+  
 * Continue exercises
 ** regex and filtering
 - continue work on =phonefilter= implementation using =grep=, =sed= in a bash script
