--- a/docs/Lecture-forkexec.org
+++ b/docs/Lecture-forkexec.org
@@ -33,6 +33,20 @@
 *** What happens if the child process calls =fork()=?
 *** Send SIGUSR1 to the process group associated with =fork_demo= several times, what happens? Why?
 *** Send SIGUSR1 to the process group associated with =forkexec= several times, what happens? Why?
+** modification
+*** Using =forkexec= as a template
+- copy into your =week14= git repo directory
+- accept command line arguments, the first will be an integer, the next will be path to an executable program, the remaining will be arguments to pass to the executable.
+
+#+BEGIN_EXAMPLE
+$ ./forkexec 3 ./child arg1 arg2
+#+END_EXAMPLE
+
+should spawn three =child= programs, each with an argument array:
+#+BEGIN_EXAMPLE
+['./child', 'arg1', 'arg2']
+#+END_EXAMPLE
+
 ** submit
 *** =ece2524.ece.vt.edu:inclass/CREATOR/week14.git=
 - =README= :: response to however many questions you were able to discuss
